# KSDB

./: .gitignore  CLOUD_DEPLOYMENT.md  CONTRIBUTING.md  DEPLOYMENT_QUICK_START.md  Dockerfile.cloud  LICENSE  MIGRATION.md  PERFORMANCE.md  QUICKSTART.md  README.md  app.py  benchmark_fair_comparison.py  benchmark_ksdb_vs_chroma.py  buildspec.yml  debug_retrieval.py  debug_signature.py  deployment.md  docker-compose.cloud.yml  docker-compose.yml  metadata.db  performance_analysis.py  performance_report.txt  push_to_ecr.sh  pyproject.toml  reproduce_500.py  walkthrough.md
.github/workflows/: deploy-aws.yml  test-credentials.yml
chroma_benchmark_db/: chroma.sqlite3
client/: benchmark.py  example_usage.py  sdk.py  test_chroma_flow.py
deploy/: .env.aws  deploy_aws.sh
ksdb/: __init__.py  auth.py  backends.py  cli.py  client.py  cloud_client.py  cloud_server.py  db.py  extractors.py  mcp_server.py  server.py  vector_index.py
server/: Dockerfile  db.py  main.py  production.Dockerfile  requirements.txt  vector_index.py
tests/: test_auto_extract.py  test_dedup.py  test_filtering.py  test_filtering_robust.py  test_graph.py  test_hybrid.py
