[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksdb"
version = "0.1.0"
description = "A production-ready vector database for AI applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kulraj Singh", email = "kulraj@example.com"}
]
keywords = ["vector-database", "ai", "machine-learning", "embeddings", "semantic-search", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sentence-transformers>=2.3.0",
    "numpy>=1.24.0",
    "hnswlib>=0.8.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
s3 = ["boto3>=1.34.0"]
server = ["gunicorn>=21.2.0", "uvicorn[standard]>=0.27.0"]
all = ["psycopg2-binary>=2.9.0", "boto3>=1.34.0", "gunicorn>=21.2.0", "uvicorn[standard]>=0.27.0"]

[project.urls]
Homepage = "https://github.com/Kulraj69/KSDB"
Documentation = "https://github.com/Kulraj69/KSDB#readme"
Repository = "https://github.com/Kulraj69/KSDB"
Issues = "https://github.com/Kulraj69/KSDB/issues"

[project.scripts]
ksdb = "ksdb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ksdb*"]
exclude = ["tests*", "docs*"]
